# QryptoRand

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
contracts/: foundry.toml
contracts/examples/: Contract.sol  README.md  Script.sol
contracts/script/: Deploy.s.sol  DistributeYpto.s.sol  StorageNumber.s.sol
contracts/src/: IQryptoStorageNumber.sol  IQryptoToken.sol
contracts/src/interfaces/: StorageInterface.sol
contracts/src/lib/: VRF.sol
contracts/test/: StorageNumber.t.sol  Token.t.sol
crates/bindings/: Cargo.toml
qrng-controller/: Cargo.toml
qrng-controller/src/: lib.rs  main.rs  offline.rs
